--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
+    # concurrency:
+    #   group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: actions/checkout@v4
         with:
